<resources>
    <string name="app_name">Acompanhamento</string>
    <string name="title_home">Início</string>
    <string name="title_dashboard">Monitoramento</string>
    <string name="title_notifications">Avisos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_salvar">Salvar</string>
    <string name="title_cad_pedido">Pedido</string>
    <string name="title_con_pedido">con.pedido</string>

    <string-array name="servicos">
        <item>Selecione</item>
        <item>Impressão</item>
        <item>Adesivos</item>
        <item>Carimbo</item>
        <item>Placa</item>
        <item>Banner</item>
    </string-array>

</resources>