<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.dev.iags.mobile.acompanhamento.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="br.dev.iags.mobile.acompanhamento.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.dev.iags.mobile.acompanhamento.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_cad_pedido"
        android:name="br.dev.iags.mobile.acompanhamento.ui.cliente.CadClienteFragment"
        android:label="@string/title_cad_pedido"
        tools:layout="@layout/fragment_cad_cliente" />
    <fragment
        android:id="@+id/navigation_con_pedido"
        android:name="br.dev.iags.mobile.acompanhamento.ui.cliente.ConpedidoFragment"
        android:label="@string/title_con_pedido"
        tools:layout="@layout/fragment_conpedido_list" />
</navigation>